force-app/main/default/objects/custom_create16__c/custom_create16__c.object-meta.xml
<CustomObject>
    <label>Custom created object16</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects16</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>