force-app/main/default/objects/custom_create16__c/fields/custom_create_16field535__c.field-meta.xml
<CustomField>
    <fullName>custom_create_16field535__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 16field535</label>
    <type>Checkbox</type>
</CustomField>